cmake_minimum_required(VERSION 3.20)
project(UnixNetworkLearning)

set(CMAKE_CXX_STANDARD 17)

include(cmake/3rd.cmake)
check_include_file(sys/select.h HAVE_SYS_SELECT_H)
check_include_file(sys/epoll.h HAVE_SYS_EPOLL_H)
check_include_file(sys/poll.h HAVE_SYS_POLL_H)

if(UNIX AND NOT APPLE)
  include(CheckIncludeFile)
  include(CheckIncludeFiles)
  if(HAVE_SYS_POLL_H)
    add_subdirectory(net/poll)
  endif()
  if(HAVE_SYS_SELECT_H)
    add_subdirectory(net/select)
  endif(HAVE_SYS_SELECT_H)
  if(HAVE_SYS_EPOLL_H)
    add_subdirectory(net/epoll)
  endif(HAVE_SYS_EPOLL_H)
  add_subdirectory(utils)
  add_subdirectory(test)
else()
  message(FATAL_ERROR "Your os must have epoll.")
endif()
